# HW_29_7

./: CMakeLists.txt  calculate.cpp  calculate.h  main.cpp
list/: list.cpp  list.hpp
